# rust-executable-template

./: .gitattributes  .gitignore  BUILD  Cargo.toml  Dockerfile  README.md  WORKSPACE
.devcontainer/: Dockerfile  devcontainer.json
i18n/languages/en-US/: common.ftl
src/: main.rs
